# az-ai-kickstarter

./: README.md  azure.yaml
infra/: abbreviations.json  deployments.yaml  main.bicep  main.parameters.json
infra/hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh  predown.ps1  predown.sh  preprovision.ps1  preprovision.sh
infra/modules/: app.bicep
src/backend/: README.md  app.py  pyproject.toml  requirements.txt
src/backend/agents/: critic.yaml  writer.yaml
src/backend/agents/brainstorming/: creator.yaml  enhancer.yaml  evaluator.yaml
src/backend/agents/problem_solving/: analyst.yaml  explorer.yaml  validator.yaml
src/backend/patterns/: debate.py  debate_ai_foundry.py  debate_examples.py  score_based_termination_strategy.py
src/backend/tests/: test_debate.py  test_debates.py
src/backend/utils/: otel.py  util.py
src/frontend/: Dockerfile  app.py  chainlit.md  load_agents.py  pyproject.toml  requirements.txt  test.py  utils.py
src/frontend/.chainlit/: config.toml
src/frontend/agents/: 01-moneta-insurance.yaml  02-moneta-banking.yaml  moneta.yaml
src/ingestion/: ingestor.md  ingestor.py  pyproject.toml  util.py
