[project]
name = "frontend"
version = "0.1.0"
description = "AI Applications Chassis - AI Apps Best Practices Tailored for Azure - Frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv ~=1.0.1",
    "semantic-kernel>=1.32.2",
    "rich>=14.0.0",
    "chainlit>=2.5.5",
]
