[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "az-ai-catalyst",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
az-ai-catalyst = { git = "https://github.com/Azure-Samples/az-ai-catalyst" }
